Improve stopwords to be offline

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -12,3 +12,4 @@ include requirements.txt
 
 recursive-include pydetex/res/ **.gif
 recursive-include pydetex/res/ **.ico
+recursive-include pydetex/res/ **.json
