--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,6 +10,6 @@ exclude test/*.py
 
 include requirements.txt
 
-recursive-include pydetex/res/ **.gif
-recursive-include pydetex/res/ **.ico
-recursive-include pydetex/res/ **.json
+recursive-include pydetex/res **.gif
+recursive-include pydetex/res **.ico
+recursive-include pydetex/res **.json
