--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -6,6 +6,7 @@ exclude .replit
 exclude docs/*
 exclude docs/_source/*
 exclude docs/_static/*
+exclude specs/*.py
 exclude test/*.py
 
 include requirements.txt
