--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -21,6 +21,8 @@ jobs:
           pip install -e .[test]
 
       - name: Run nosetests
+        env:
+          GITHUB: true
         run: nosetests test/ -v --with-coverage
 
       - name: Coverage report
