Added make uppercase support

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-bs4
-flatlatex>=0.15
-langdetect
-nltk
-outdated
+beautifulsoup4 >= 4.11.1
+flatlatex >= 0.15
+langdetect >= 1.0.9
+nltk >= 3.7
+outdated >= 0.2.2
 PyMultiDictionary>=1.2.0
-pyperclip
-requests
-tkmacosx
+pyperclip >= 1.8.2
+requests >= 2.28.1
+tkmacosx >= 1.0.5
