--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -30,6 +30,7 @@ jobs:
         env:
           GITHUB: true
         run: |
+          export PYTHONPATH=$PWD
           nose2 --verbose --with-coverage
 
       - name: Coverage report
