--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -26,7 +26,7 @@ jobs:
         run:
           pip install -e .[test]
 
-      - name: Run nose
+      - name: Test
         env:
           GITHUB: true
         run: |
