--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ on:
     - master
 
 jobs:
-  test:
+  testing:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -34,6 +34,8 @@ jobs:
         run: pip install -e .[test]
 
       - name: Test
+        env:
+          GITHUB: true
         run: |
           export PYTHONPATH=$PWD
           nose2 --verbose --with-coverage
