--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,8 +17,8 @@ jobs:
     uses: ppizarror/workflow-actions/.github/workflows/test_python.yml@master
     strategy:
       matrix:
-        python-version: [ 3.7, 3.8, 3.9, '3.10' ]
+        python: [ 3.7, 3.8, 3.9, '3.10' ]
     with:
-      env_vars: GITHUB=true
+      env-vars: GITHUB=true
       os: ubuntu-latest
-      python_version: ${{ matrix.python-version }}
+      python-version: ${{ matrix.python }}
