Fix build tools rtfd

--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -5,17 +5,18 @@
 # Required
 version: 2
 
+# Configure os
+build:
+  os: ubuntu-22.04
+  tools:
+    python: 3.8
+
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/conf.py
 
-# Configure os
-build:
-  os: ubuntu-22.04
-
 # Optionally set the version of Python and requirements required to build your docs
 python:
-  version: 3.8
   install:
     - method: pip
       path: .
