--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     strategy:
       matrix:
         os:
-          - macos-13
+          - macos-latest
           - windows-latest
     steps:
       - name: Checkout
