--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,7 @@ jobs:
     uses: ppizarror/workflow-actions/.github/workflows/test_python.yml@master
     strategy:
       matrix:
-        python: [ 3.7, 3.8, 3.9, '3.10' ]
+        python: [ '3.10', '3.11' ]
     with:
       env-vars: GITHUB=true
       install-extras: test
@@ -40,7 +40,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           cache: pip
-          python-version: 3.8
+          python-version: 3.10
 
       - name: Install dependencies
         shell: bash
